SegmentTreeのメンバ変数を_付きに変更

--- a/make_SegmentTree/make_SegmentTree.vcxproj
+++ b/make_SegmentTree/make_SegmentTree.vcxproj
@@ -127,9 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DequeSegmentTree.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DequeSegmentTree.h" />
     <ClInclude Include="SegmentTree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
