--- a/make_SegmentTree/make_SegmentTree.vcxproj
+++ b/make_SegmentTree/make_SegmentTree.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="DequeSegmentTree.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="test_DequeSegmentTree.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DequeSegmentTree.h" />
