--- a/make_SegmentTree/make_SegmentTree.vcxproj.filters
+++ b/make_SegmentTree/make_SegmentTree.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="DequeSegmentTree.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="test_DequeSegmentTree.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SegmentTree.h">
